# cagent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
benchmarks/: coding_tasks.json
cagent/: __init__.py  cli.py  context_manager.py  evaluator.py  mcp.py  memory.py  metrics.py  models.py  runtime.py  tools.py  workspace.py
scripts/: collect_resume_metrics.py  run_large_scale_experiments.py  run_provider_experiments.py
spec/: README.md
spec/conventions/: working-norms.md
spec/features/context-budget/: design.md
spec/features/context-compression/: design-v2-distillation.md  design.md  summary.md  test-report.md
spec/features/mcp-client/: design.md  plan.md  summary.md  test-report.md
tests/: test-compact.py  test_context_manager.py  test_evaluator.py  test_mcp.py  test_memory.py  test_metrics.py  test_pico.py  test_run_store.py  test_safety_invariants.py  test_task_state.py
tests/fixtures/: echo_mcp_server.py
