[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cagent"
version = "0.1.0"
description = "Small local coding agent for Ollama, OpenAI-compatible, Anthropic-compatible, and DeepSeek models"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
cagent = "cagent.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.4.4",
]

[tool.setuptools]
packages = ["cagent"]
